fixing revision overlap

--- a/media/css/project.css
+++ b/media/css/project.css
@@ -56,7 +56,6 @@ input.materialCitation:hover
 .essay-space {
 left:0;
 position:absolute;
-margin-top:-3px;
 margin-left:380px;
 max-width:650px;
 width:60%;
@@ -301,8 +300,7 @@ li.comment-thread:target > .comment .threaded_comment_header {
 
 
 #last-version-saved {
-    margin-top:-1em;
-    margin-bottom:-3px;
+
     width:100%;
 }
 
