--- a/media/css/slider.css
+++ b/media/css/slider.css
@@ -26,7 +26,7 @@ table.slider-top {
 .slider-top div#member_col, 
 .slider-top div#project_col 
 {  
-  width:250px;
+  width:510px;
   }
 .slider-top div#filter_col
 { 
